# remarkable-dnd-sheet

./: .gitignore  .gitmodules  .qmlls.ini  Cargo.toml  README.md  build.rs  sheet_bindings.json
.cargo/: config.toml
cpp/: epscreenmodeitem.h  ink_bridge.cpp  inkcanvas.cpp  inkcanvas.h
docs/: sheet-bindings.md
qml/: main.qml
src/: calculator.rs  charsheet.rs  main.rs  peninput.rs  player.rs
src/dnd_data/: backgrounds.rs  class_choices.rs  class_features.rs  classes.rs  feats.rs  mod.rs  race_features.rs  races.rs  types.rs
toolchain/: cc-rm  cxx-rm
tools/: dump_fields.py  extract_fields.py
